--- a/circuits/Nargo.toml
+++ b/circuits/Nargo.toml
@@ -4,4 +4,4 @@ type = "bin"
 authors = [""]
 
 [dependencies]
-poseidon = { tag = "v0.1.0", git = "https://github.com/noir-lang/poseidon" }
+greco = { tag = "v0.1.0", git = "https://github.com/gnosisguild/greco", branch = "main", directory = "./circuits" }
